comecei a escrever o contúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <head>
-            <h1>Título do Site</h1>
+            <h1>Cursos Gratis</h1>
         </head>
         <article>
-            <h2>Artigo 001</h2>
-            <P>Texto Artigo 001</P>
+            <h2>Curso de hmtl5 com css3</h2>
+            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis vitae repellat nesciunt. Eligendi tempora repellendus at, animi voluptatem, nobis ducimus excepturi nesciunt magnam dignissimos suscipit molestias deleniti dolorem inventore dolore!</P>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>curso de java Script</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, hic nostrum? Iste placeat sequi quae exercitationem nulla quidem fugit officiis? Quasi corporis dicta beatae, consequatur nobis hic ipsum error quas!</p>
         </article>
     </main>
 </body>
